fixed border radius on image on safari

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -32,6 +32,7 @@
   align-self: center;
   justify-content: center;
   overflow: hidden;
+  border-radius:50px;
 }
 
 @media only screen and (max-width: 960px) {
